# lib-version

./: .gitignore  README.md  VersionUtil.py  pyproject.toml  setup.py  test_env.py
.github/workflows/: release.yml
remlaversionutilpy/: __init__.py  remlaversionutilpy.py
